# StellarOdyssey

./: CMakeLists.txt  README.md  install.sh
config/: config.yaml
shaders/: basic.vert
src/: main.cpp
src/core/: application.cpp  application.h
src/engine/: core.h  window.cpp  window.h
src/engine/renderer/: renderer.cpp  renderer.h  shader.cpp  shader.h
src/engine/vulkan_base/: vulkan_base.cpp  vulkan_base.h
src/tools/: config.cpp  config.h  logger.cpp  logger.h
